--- a/book/appsettings.Development.json
+++ b/book/appsettings.Development.json
@@ -1,8 +1,16 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=applicationdb;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "Admin": {
+    "Name": "Admin1",
+    "Password": "12345"
   }
 }
