--- a/book/appsettings.Development.json
+++ b/book/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=applicationdb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=.\\SqlExpress; Database=applicationdb;Trusted_Connection=True; TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
