update db connection and HomeController/Index

--- a/book/appsettings.json
+++ b/book/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SqlExpress; Database=applicationdb;Trusted_Connection=True; TrustServerCertificate=true;"
+    "DefaultConnection": "Server=.\\SQLEXPRESS; Database=bookdb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
